Fixing the marging top of title wrap

--- a/src/app/styles/SectionTitle.module.css
+++ b/src/app/styles/SectionTitle.module.css
@@ -1,19 +1,5 @@
 .section_title_wrap {
-    margin-top: 110px;
-    transform:  translateY(0%);
+    margin-top: 150px;
 }
 
 
-.cssanimation{
-  animation-duration: 1s;
-}
-
-
-.fadeInBottom { animation-name: fadeInBottom }
-@keyframes fadeInBottom {
-  from {
-      opacity: 0;
-      transform: translateY(30%);
-  }
-  to { opacity: 1 }
-}
